--- a/css/styles.css
+++ b/css/styles.css
@@ -7,14 +7,14 @@
         --subtle-text: #8E8F99;
         --accent: #E7E9FC;
         --cloud-bckground: #F4F4FD;
-        --modal-overlay: #2E2F42;
+        --white-base: #ffffff;
     }
 
     body {
         font-family: 'Roboto',sans-serif;
         color: var(--section-colour);
         font-size: 16px;
-        background-color: #ffffff;
+        background-color: var(--white-base)
     }
 
     ul{
@@ -45,15 +45,15 @@
         color: var(--accent);
     }
 
-    .footer-link{
+    .link-nav{
         line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: var(--color-text-main);
+        letter-spacing: 0.02px;
+        color: var(--section-colour);
         font-weight: 500;
     }
 
-    .footer-link:hover,
-    .footer-link:focus{
+    .link-nav:hover,
+    .link-nav:focus{
         color: var(--active-button);
     }
 
@@ -65,7 +65,7 @@
     }
 
     .contatc-link{
-        line-height: 1.5px;
+        line-height: 1.5;
         letter-spacing: 0.02em;
         font-weight: 400;
         color:var(--text-discription);
@@ -77,18 +77,17 @@
         color: var(--active-button);
     }
 
-    .title{
+    .banner-title{
         font-size: 56px;
         line-height: 1.07;
         text-align: center;
         letter-spacing: 0.02em;
-        color: #ffffff;
+        color: var(--white-base);
     }
 
     .section-title{
         font-size: 36px;
         line-height: 1.1;
-        font-weight: 700;
         text-align: center;
         letter-spacing: 0.02em;
         text-transform: capitalize;
@@ -102,7 +101,6 @@
         text-align: center;
     }
     .section-text{
-        font-weight: 400;
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: var(--text-discription);
@@ -120,7 +118,7 @@
 
     button{
         background-color: var(--primary-brand);
-        color: #ffffff;
+        color: var(--white-base);
         cursor: pointer;
         line-height: 1.5; 
         display: flex;
